; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-object.c_fmt_hex.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-object.c_fmt_hex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fmt = type { i32, i32, i32 }

@fmt_hex_out = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.fmt*, i32*)* @fmt_hex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fmt_hex(i32* %0, %struct.fmt* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.fmt*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.fmt* %1, %struct.fmt** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i64 @pdf_to_str_buf(i32* %9, i32* %10)
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %7, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @pdf_to_str_len(i32* %13, i32* %14)
  store i32 %15, i32* %8, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = load %struct.fmt*, %struct.fmt** %5, align 8
  %18 = call i32 @fmt_putc(i32* %16, %struct.fmt* %17, i8 signext 60)
  %19 = load i32*, i32** %4, align 8
  %20 = load %struct.fmt*, %struct.fmt** %5, align 8
  %21 = getelementptr inbounds %struct.fmt, %struct.fmt* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.fmt*, %struct.fmt** %5, align 8
  %24 = getelementptr inbounds %struct.fmt, %struct.fmt* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.fmt*, %struct.fmt** %5, align 8
  %27 = getelementptr inbounds %struct.fmt, %struct.fmt* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @fmt_hex_out, align 4
  %30 = load %struct.fmt*, %struct.fmt** %5, align 8
  %31 = load i8*, i8** %7, align 8
  %32 = load i32, i32* %8, align 4
  %33 = call i32 @pdf_encrypt_data(i32* %19, i32 %22, i32 %25, i32 %28, i32 %29, %struct.fmt* %30, i8* %31, i32 %32)
  %34 = load i32*, i32** %4, align 8
  %35 = load %struct.fmt*, %struct.fmt** %5, align 8
  %36 = call i32 @fmt_putc(i32* %34, %struct.fmt* %35, i8 signext 62)
  ret void
}

declare dso_local i64 @pdf_to_str_buf(i32*, i32*) #1

declare dso_local i32 @pdf_to_str_len(i32*, i32*) #1

declare dso_local i32 @fmt_putc(i32*, %struct.fmt*, i8 signext) #1

declare dso_local i32 @pdf_encrypt_data(i32*, i32, i32, i32, i32, %struct.fmt*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
